dark mode styling fixes

--- a/finalProject/style.css
+++ b/finalProject/style.css
@@ -180,26 +180,26 @@ body.dark-mode .link {
     color: #ddd;
 }
 body.dark-mode .link:hover {
-    color: #fff;
+    color: #ffffff;
 }
 
 body.dark-mode .card {
-    background-color: #222;
+    background-color: #212121;
     color: #f5f5f5;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
 }
 
 body.dark-mode .accordion-content {
-    background-color: #222;
+    background-color: #1d1c1c;
 }
 
 body.dark-mode .btn {
     background-color: #5a5a5a;
     color: #f5f5f5;
-    border-color: #777;
+    border-color: #5a5a5a;
 }
 body.dark-mode .btn:hover {
-    background-color: #666;
+    background-color: #6e6e6e;
 }
 
 body.dark-mode .card-content {
@@ -208,6 +208,10 @@ body.dark-mode .card-content {
 body.dark-mode .modal-content {
     background-color: black;
     color: white; 
+}
+
+body.dark-mode .black_header {
+    color: white;
 }
 
 
